<resources>
    <string name="key_smscommunicator_otp_password" translatable="false">smscommunicator_otp_password</string>
    <string name="key_smscommunicator_otp_secret" translatable="false">smscommunicator_otp_secret</string>
    <string name="key_smscommunicator_remote_bolus_min_distance" translatable="false">smscommunicator_remotebolusmindistance</string>
    <string name="key_smscommunicator_allowednumbers" translatable="false">smscommunicator_allowednumbers</string>
    <string name="key_smscommunicator_remote_commands_allowed" translatable="false">smscommunicator_remotecommandsallowed</string>
    <string name="smscommunicator">SMS Communicator</string>
    <string name="smscommunicator_otp_pin">Additional mandatory PIN at token end</string>
    <string name="smscommunicator_otp_pin_summary">Additional digits that should be memorised and glued at end of each generated One Time Password</string>
    <string name="smscommunicator_tab_otp_label">Authenticator setup</string>
    <string name="smscommunicator_code_verify_label">Code to check:</string>
    <string name="smscommunicator_code_verify_hint">OTP + PIN</string>
    <string name="smscommunicator_code_verify_info">The verification code consist of 6 digits displayed by Authenticator app (known as OTP) followed by 3 or more digits of mandatory PIN.</string>
    <string name="smscommunicator_otp_reset_btn">Reset Authenticators</string>
    <string name="smscommunicator_otp_step1_install_header">1. Install Authenticator</string>
    <string name="smscommunicator_otp_step2_provisioning_header">2. Scan code to setup AAPS OTP codes</string>
    <string name="smscommunicator_otp_step3_test_header">3. Test One-Time-Password</string>
    <string name="smscommunicator_otp_reset_header">Reset Authenticators</string>
    <string name="smscommunicator_otp_install_info">On each follower phone install Authenticator app that support RFC 6238 TOTP tokens. Popular free apps are:\n • Authy\n • Google Authenticator\n • LastPass Authenticator\n • FreeOTP Authenticator</string>
    <string name="smscommunicator_otp_reset_warning">By resetting authenticator you make all already provisioned authenticators invalid. You will need to set up them again!</string>
    <string name="smscommunicator_allowednumbers">Allowed phone numbers</string>
    <string name="smscommunicator_allowednumbers_summary">+XXXXXXXXXX;+YYYYYYYYYY</string>
    <string name="smscommunicator_remote_bolus_min_distance_summary">Minimum number of minutes that must elapse between one remote bolus and the next</string>
    <string name="smscommunicator_remote_bolus_min_distance">How many minutes must elapse, at least, between one bolus and the next</string>
    <string name="smscommunicator_remote_commands_allowed">Allow remote commands via SMS</string>
    <string name="smscommunicator_report_pump_unreachable_summary">Send SMS if unreachable pump event is triggered</string>
    <string name="smscommunicator_pump_unreachable">Report pump unreachable</string>
    <string name="a11y_otp_qr_code">QR Code for setup one time password</string>
    <string name="key_xdrip_status_detailed_iob" translatable="false">xdripstatus_detailediob</string>
    <string name="key_xdrip_status_show_bgi" translatable="false">xdripstatus_showbgi</string>
    <string name="key_xdrip_status_settings" translatable="false">xdripstatus_settings</string>
    <string name="xdrip_status_detailed_iob_title">Show detailed IOB</string>
    <string name="xdrip_status_detailed_iob_summary">Break down IOB into bolus and basal IOB on the watchface</string>
    <string name="xdrip_status_show_bgi_title">Show BGI</string>
    <string name="xdrip_status_show_bgi_summary">Add BGI to status line</string>
    <string name="xdrip_status_settings">xDrip+ Status (watch)</string>
    <string name="key_ns_log_app_started_event" translatable="false">ns_log_app_started_event</string>
    <string name="ns_client_internal_title">NSClient</string>
    <string name="ns_client_url_title">Nightscout URL</string>
    <string name="ns_client_url_dialog_message">Enter Your Nightscout URL</string>
    <string name="nsclient_token_title">NS access token</string>
    <string name="nsclient_token_dialog_title">NS access token</string>
    <string name="nsclient_token_dialog_message">Access token generated on NS admin page (min 17 chars)</string>
    <string name="ns_sync_options">Synchronization</string>
    <string name="key_ns_upload" translatable="false">ns_upload</string>
    <string name="ns_upload_summary">Profiles, boluses, carbs, temporary basals are uploaded to NS</string>
    <string name="ns_upload">Upload data to NS</string>
    <string name="ns_receive_profile_store">Receive profile store</string>
    <string name="ns_receive_profile_store_summary">Synchronize profiles from NS profile editor</string>
    <string name="ns_receive_temp_target">Receive temporary targets</string>
    <string name="ns_receive_temp_target_summary">Accept temporary targets entered through NS or NSClient</string>
    <string name="ns_receive_profile_switch">Receive profile switches</string>
    <string name="ns_receive_profile_switch_summary">Accept profile switches entered through NS or NSClient</string>
    <string name="ns_receive_offline_event">Receive APS offline events</string>
    <string name="ns_receive_offline_event_summary">Accept APS Offline events entered through NS or NSClient</string>
    <string name="ns_receive_tbr_eb">Receive TBR and EB</string>
    <string name="ns_receive_tbr_eb_summary">Accept TBR and EB entered through another instance</string>
    <string name="ns_receive_insulin">Receive insulin</string>
    <string name="ns_receive_insulin_summary">Accept insulin entered through NS or NSClient (it\'s not delivered, only calculated towards IOB)</string>
    <string name="ns_receive_carbs">Receive carbs</string>
    <string name="ns_receive_carbs_summary">Accept carbs entered through NS or NSClient</string>
    <string name="key_ns_receive_tbr_eb" translatable="false">ns_receive_tbr_eb</string>
    <string name="ns_receive_therapy_events">Receive therapy events</string>
    <string name="ns_receive_therapy_events_summary">Accept therapy events (cannula, insulin, battery change etc) entered through NS or NSClient</string>
    <string name="key_ns_receive_cgm" translatable="false">ns_receive_cgm</string>
    <string name="ns_receive_cgm">Receive/backfill CGM data</string>
    <string name="ns_receive_cgm_summary">Accept CGM data from NS</string>
    <string name="ns_sync_slow">Slow down uploads</string>
    <string name="ns_alarm_options">Alarm options</string>
    <string name="key_ns_announcements" translatable="false">ns_announcements</string>
    <string name="key_ns_alarms" translatable="false">ns_alarms</string>
    <string name="key_ns_alarm_stale_data_value" translatable="false">ns_alarm_stale_data_value</string>
    <string name="key_ns_alarm_urgent_stale_data_value" translatable="false">ns_alarm_urgent_stale_data_value</string>
    <string name="ns_alarms">Create notifications from NS alarms</string>
    <string name="ns_announcements">Create notifications from NS announcements</string>
    <string name="ns_alarm_stale_data_value_label">Stale data threshold [min]</string>
    <string name="ns_alarm_urgent_stale_data_value_label">Urgent stale data threshold [min]</string>
    <string name="ns_log_app_started_event">Log app start to NS</string>
    <string name="key_tidepool_username" translatable="false">tidepool_username</string>
    <string name="key_tidepool_password" translatable="false">tidepool_password</string>
    <string name="key_tidepool_dev_servers" translatable="false">tidepool_dev_servers</string>
    <string name="key_tidepool_test_login" translatable="false">tidepool_test_login</string>
    <string name="key_tidepool_only_while_charging" translatable="false">tidepool_only_while_charging</string>
    <string name="key_tidepool_only_while_unmetered" translatable="false">tidepool_only_while_unmetered</string>
    <string name="key_tidepool_upload_profile" translatable="false">tidepool_upload_profile</string>
    <string name="key_tidepool_upload_tbr" translatable="false">tidepool_upload_tbr</string>
    <string name="key_tidepool_upload_cgm" translatable="false">tidepool_upload_cgm</string>
    <string name="key_tidepool_upload_bolus" translatable="false">tidepool_upload_bolus</string>
    <string name="key_tidepool_upload_bg" translatable="false">tidepool_upload_bg</string>
    <string name="summary_tidepool_username">Your Tidepool login user name, normally your email address</string>
    <string name="title_tidepool_username">Login User Name</string>
    <string name="summary_tidepool_password">Your Tidepool login password</string>
    <string name="title_tidepool_password">Login Password</string>
    <string name="title_tidepool_test_login">Test Tidepool Login</string>
    <string name="summary_tidepool_dev_servers">If enabled, uploads will go to https://int-app.tidepool.org instead of the regular https://app.tidepool.org/</string>
    <string name="title_tidepool_dev_servers">Use Integration (test) servers</string>
    <string name="tidepool">Tidepool</string>
    <string name="tidepool_upload_cgm">Upload CGM data</string>
    <string name="tidepool_upload_bolus">Upload treatments (insulin, carbs)</string>
    <string name="tidepool_upload_tbr">Upload temporary basals</string>
    <string name="tidepool_upload_profile">Upload profile switches, temp targets</string>
    <string name="tidepool_upload_bg">Upload BG tests</string>
    <string name="key_do_ns_upload" translatable="false">dexcomg5_nsupload</string>
    <string name="key_dexcom_log_ns_sensor_change" translatable="false">dexcom_lognssensorchange</string>
    <string name="xdrip">xDrip+</string>
    <string name="do_ns_upload_title">Upload BG data to NS</string>
    <string name="bgsource_upload">BG upload settings</string>
    <string name="dexcom_log_ns_sensor_change_title">Log sensor change to NS</string>
    <string name="dexcom_log_ns_sensor_change_summary">Create event \"Sensor Change\" in NS automatically on sensor start</string>
    <string name="key_ns_sync_slow" translatable="false">ns_sync_slow</string>
    <string name="key_ns_client_token" translatable="false">nsclient_token</string>
    <string name="key_ns_create_announcements_from_carbs_req" translatable="false">ns_create_announcements_from_carbs_req</string>
    <string name="key_ns_cellular" translatable="false">ns_cellular</string>
    <string name="key_ns_wifi" translatable="false">ns_wifi</string>
    <string name="key_ns_wifi_ssids" translatable="false">ns_wifi_ssids</string>
    <string name="key_ns_allow_roaming" translatable="false">ns_allow_roaming</string>
    <string name="key_ns_battery" translatable="false">ns_battery</string>
    <string name="key_ns_charging" translatable="false">ns_charging</string>
    <string name="ns_cellular">Use Cellular connection</string>
    <string name="ns_wifi">Use WiFi connection</string>
    <string name="ns_wifi_ssids">WiFi SSID</string>
    <string name="ns_charging">During charging</string>
    <string name="ns_battery">On battery</string>
    <string name="connection_settings_title">Connection settings</string>
    <string name="ns_wifi_allowed_ssids">Allowed SSIDs (semicolon separated)</string>
    <string name="ns_allow_roaming">Allow connection in roaming</string>
    <string name="ns_create_announcements_from_errors_title">Create announcements from errors</string>
    <string name="ns_create_announcements_from_carbs_req_title">Create announcements from carbs required alerts</string>
    <string name="ns_create_announcements_from_errors_summary">Create Nightscout announcement for error dialogs and local alerts (also viewable in Careportal under Treatments)</string>
    <string name="ns_create_announcements_from_carbs_req_summary">Create Nightscout announcements for carbs required alerts</string>
</resources>