<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:validate="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:key="@string/key_smscommunicator_settings"
        android:title="@string/smscommunicator"
        app:initialExpandedChildrenCount="0">

        <app.aaps.core.validators.ValidatingEditTextPreference
            android:key="@string/key_smscommunicator_allowednumbers"
            android:summary="@string/smscommunicator_allowednumbers_summary"
            android:title="@string/smscommunicator_allowednumbers"
            validate:testType="multiPhone" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/key_smscommunicator_remote_commands_allowed"
            android:title="@string/smscommunicator_remote_commands_allowed" />

        <app.aaps.core.validators.ValidatingEditTextPreference
            android:defaultValue="15"
            android:key="@string/key_smscommunicator_remote_bolus_min_distance"
            android:summary="@string/smscommunicator_remote_bolus_min_distance_summary"
            android:title="@string/smscommunicator_remote_bolus_min_distance"
            validate:maxNumber="60"
            validate:minNumber="3"
            validate:testType="numericRange" />

        <app.aaps.core.validators.ValidatingEditTextPreference
            android:dependency="@string/key_smscommunicator_remote_commands_allowed"
            android:key="@string/key_smscommunicator_otp_password"
            android:summary="@string/smscommunicator_otp_pin_summary"
            android:title="@string/smscommunicator_otp_pin"
            validate:testType="pinStrength" />

        <Preference
            android:dependency="@string/key_smscommunicator_remote_commands_allowed"
            android:key="otpsetup"
            android:title="@string/smscommunicator_tab_otp_label">
            <intent android:action="info.nightscout.androidaps.plugins.general.smsCommunicator.activities.SmsCommunicatorOtpActivity" />
        </Preference>

        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/key_smscommunicator_report_pump_unreachable"
            android:summary="@string/smscommunicator_report_pump_unreachable_summary"
            android:title="@string/smscommunicator_pump_unreachable" />

    </PreferenceCategory>

</androidx.preference.PreferenceScreen>