<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:key="xdrip_category"
        android:title="@string/xdrip"
        app:initialExpandedChildrenCount="0">

        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/key_xdrip_send_status"
            android:title="@string/xdrip_send_status_title" />

        <androidx.preference.PreferenceScreen
            android:key="@string/key_xdrip_status_settings"
            android:title="@string/xdrip_status_settings">

            <SwitchPreference
                android:defaultValue="true"
                android:key="@string/key_xdrip_status_detailed_iob"
                android:summary="@string/xdrip_status_detailed_iob_summary"
                android:title="@string/xdrip_status_detailed_iob_title" />

            <SwitchPreference
                android:defaultValue="false"
                android:key="@string/key_xdrip_status_show_bgi"
                android:summary="@string/xdrip_status_show_bgi_summary"
                android:title="@string/xdrip_status_show_bgi_title" />

        </androidx.preference.PreferenceScreen>

    </PreferenceCategory>

</androidx.preference.PreferenceScreen>