<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:key="@string/key_dexcom_settings"
        android:title="@string/bgsource_upload"
        app:initialExpandedChildrenCount="0">

        <app.aaps.core.keys.AdaptiveSwitchPreference
            android:key="@string/key_do_bg_ns_upload"
            android:title="@string/do_ns_upload_title" />

        <app.aaps.core.keys.AdaptiveSwitchPreference
            android:key="@string/key_dexcom_log_ns_sensor_change"
            android:summary="@string/dexcom_log_ns_sensor_change_summary"
            android:title="@string/dexcom_log_ns_sensor_change_title" />

    </PreferenceCategory>

</androidx.preference.PreferenceScreen>